--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,20 @@ html {
   box-sizing: border-box;
 }
 
-*,
+/* *,
 *:before,
 *:after {
   box-sizing: inherit;
+} */
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -51,13 +61,24 @@ img {
   margin: 0 auto;
   width: 90%;
 }
-.btn {
+/* .btn {
   color: var(--gris);
   background-color: var(--blanco);
   border: 1px solid var(--gris);
   padding: 0.5rem 2rem;
   transition: background-color 0.3s;
+} */
+.btn {
+  color: var(--gris);
+  background-color: var(--blanco);
+  border: 1px solid var(--gris);
+  padding: 0.5rem 2rem;
+  transition: background-color 0.3s; /* Propiedad principal */
+  -webkit-transition: background-color 0.3s; /* Para Webkit (Chrome, Safari) */
+  -moz-transition: background-color 0.3s; /* Para Firefox */
+  -o-transition: background-color 0.3s; /* Para Opera */
 }
+
 .btn:hover {
   background-color: var(--gris);
   color: var(--blanco);
@@ -80,7 +101,6 @@ img {
   background-position: center;
   padding: 5rem 0;
 }
-
 
 .contenido-header {
   display: flex;
@@ -235,10 +255,21 @@ img {
 
 .modelo{
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2,1fr);
     background-repeat: no-repeat;
     background-position: bottom center;
+    margin-bottom: 5rem;
 
+}
+
+.modelo:last-of-type{
+  margin-bottom: 0;
+}
+
+@media (min-width: 768px){
+  .modelo{
+    grid-template-columns: repeat(2,1fr);
+  }
 }
 
 .contenido-modelo{
@@ -251,9 +282,29 @@ img {
 
 }
 
+@media (min-width: 768px){
+  .basico{
+    background-position: top right;
+  } 
+  .basico .contenido-modelo{
+    grid-row:  2/3;
+    padding: 2rem 2rem 2rem 0;
+   }
+}
+
 .premier{
     background-image: url(../img/modelo_premier.jpg);
 
+}
+
+@media (min-width: 768px){
+  .premier {
+    background-position: top left;
+  }
+  .premier .contenido-modelo{
+    grid-column: 2/3;
+    padding:  2rem;
+  }
 }
 
 .elite{
@@ -261,4 +312,95 @@ img {
     
 }
 
+@media (min-width: 768px){
+  .elite{
+    background-position: top right;
+  }
+  .elite .contenido-modelo{
+    padding: 2rem 2rem 2rem 0;
+   }
+}
+
 /* Fin Modelos */
+
+
+/**Galeria */
+.galeria{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 2rem;
+}
+
+@media (min-width: 768px){
+   .galeria {
+    grid-template-columns: repeat(3,1fr);
+   }
+}
+
+
+.galeria img{
+  object-fit: cover;
+  height: 100%;
+}
+
+.galeria .imagen:nth-child(2){
+  grid-column: 2 / 3;
+  grid-row: 1/3
+}
+
+@media (min-width:768px){
+  .galeria .imagen:nth-child(2){ 
+      grid-column: 1/2;
+      grid-row: 2/4;
+
+  } 
+}
+.galeria .imagen:nth-child(3){
+  grid-row: 3/5;
+  grid-column: 2/3;
+}
+
+@media (min-width:768px){
+  .galeria .imagen:nth-child(3){
+      grid-column: 2/3;
+      grid-row: 1/2;
+
+  } 
+}
+.galeria .imagen:nth-child(6){
+  grid-row: 2/4;
+}
+
+@media (min-width:768px){
+  .galeria .imagen:nth-child(6){ 
+      grid-column: 3/4;
+      grid-row: 1/3;
+
+  } 
+}
+
+.footer{
+  height: 50rem;
+  background-image: url(../img/footer_bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+
+  color: var(--blanco);
+}
+.footer a{
+  color: var(--blanco);
+  font-size: 2rem;
+}
+
+.copyright{
+  background-color: var(--negro);
+  text-align: center;
+  margin: 5rem 0 0 0;
+  font-size: 2rem;
+  padding: 1rem;
+}
